# glPBR

./: .gitignore  CMakeLists.txt  README.md
shader/: brdf.frag  equirectangular_to_cubemap.frag  irradiance_convolution.frag  pbr.frag  pbr.vert  prefilter.frag
src/: main.cpp
src/cameras/: camera.cpp  camera.h
src/object3ds/: CMakeLists.txt  mesh.cpp  mesh.h  model.cpp  model.h
src/shader/: shader.cpp  shader.h
